feat: Update version to 3.0.0 and modify git_release.json for release details

--- a/git_release.json
+++ b/git_release.json
@@ -1,6 +1,6 @@
 {
-  "version": "2.3.0",
-  "download_url": "",
-  "changelog": "",
-  "date": "2025-07-13"
+  "version": "3.0.0",
+  "download_url": "https://github.com/zdravkopavlov/Labels-Tool/releases/download/v3.0.0/Labels_Tool_Setup_3.0.0.exe",
+  "changelog": "- first release",
+  "date": "2025-07-22"
 }
