feat: Update version to 3.0.1 and enhance changelog with new features

--- a/git_release.json
+++ b/git_release.json
@@ -1,5 +1,5 @@
 {
-  "version": "3.0.0",
-  "changelog": "- first release",
-  "date": "2025-07-22"
+  "version": "3.0.1",
+  "changelog": "- ново: Преработен LabelSheetEditor и LeftPaneWidget – поддържат избор на шрифтове от папка fonts\n- ново: Подобрено визуализиране на етикети с динамичен радиус на заобляне и регулируеми отстояния",
+  "date": "2025-07-23"
 }
