--- a/git_release.json
+++ b/git_release.json
@@ -1,6 +1,6 @@
 {
   "version": "3.0.2",
-  "download_url": "https://github.com/zdravkopavlov/Labels-Tool/releases/download/v3.0.1/Labels_Tool_Setup_3.0.1.exe",
-  "changelog": "- ново: Преработен LabelSheetEditor и LeftPaneWidget – поддържат избор на шрифтове от папка fonts\n- ново: Подобрено визуализиране на етикети с динамичен радиус на заобляне и регулируеми отстояния",
+  "download_url": "https://github.com/zdravkopavlov/Labels-Tool/releases/download/v3.0.2/Labels_Tool_Setup_3.0.2.exe",
+  "changelog": "- Добавена фукция за изчистване на избраните етикети",
   "date": "2025-07-23"
 }
